--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "audioconcat": "^0.1.3",
     "react": "^16.8.5",
+    "react-audio-player": "^0.11.0",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8"
   },
