--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.8.5",
     "react-audio-player": "^0.11.0",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "sox": "^0.1.0",
+    "sox-audio": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
