got the concat and merge function to work independently which outputs the tagged beat. Need to make the tagCount function invoke immediately and store the numerical value instead of having to do it manually in the CLI. Next work block I will concat both functions so that they both run when one function is called.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ yarn-debug.log*
 yarn-error.log*
 
 /Users/newowner/Desktop/WDI/smart_music_tag/src/audiofiles
+/Users/newowner/Desktop/WDI/smart_music_tag/tagged_beat.mp3
